--- a/klaus-site.html
+++ b/klaus-site.html
@@ -257,6 +257,19 @@
 
        </section>
 
+       <section class="section-6">
+        <div class="conainer">
+            <div class="row">
+                <div class="button-1">
+                    <div class="icon"> <i class="fa fa-linkedin"></i></div>
+                    <div class="text-button"> linkedin</div>
+                </div>
+            
+
+            </div>
+        </div>
+       </section>
+
 
 
        
